--- a/css/styles.css
+++ b/css/styles.css
@@ -11404,3 +11404,27 @@ header.masthead .bg-circle-4 {
     font-size: 4rem;
   }
 }
+
+.login-rectangle {
+  position: absolute;
+  width: 400px;
+  height: 260px;
+  left: 500px;
+  top: 200px;
+  
+  background: rgba(196, 196, 196, 0.5);
+  border-radius: 50px;
+  /* opacity: 0.5; */
+}
+
+.signup-rectangle {
+  position: absolute;
+  width: 400px;
+  height: 600px;
+  left: 500px;
+  top: 150px;
+  
+  background: rgba(196, 196, 196, 0.5);
+  border-radius: 50px;
+  /* opacity: 0.5; */
+}
